fix : change Js to JS

--- a/src/components/Tech.astro
+++ b/src/components/Tech.astro
@@ -15,7 +15,7 @@ import gaIco from "../../public/icons/github_actions.png?url";
 const techCardData = [
     {
         icon: reactIco,
-        title: "ReactJs",
+        title: "ReactJS",
         text: "The perfect choice for developing large, scalable and reusable interfaces. When multiple people is colaborating in the same interface the modularization of components is a must",
         link: "https://es.react.dev/",
     },
@@ -27,7 +27,7 @@ const techCardData = [
     },
     {
         icon: electronIco,
-        title: "ElectronJs",
+        title: "ElectronJS",
         text: "The framework for developing cross-platform was the perfect choice for this project. Develop once and run everywhere",
         link: "https://www.electronjs.org/es/",
     },
