feat : add installer download links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,6 +15,11 @@ import antonioMrtzLogoIcon from "../../public/icons/logoAM.png?url";
                     <ul>
                         <li>
                             <a
+                                href="https://github.com/AntonioMrtz/SpotifyElectron/releases"
+                                >Download</a>
+                        </li>
+                        <li>
+                            <a
                                 href="https://github.com/AntonioMrtz/SpotifyElectron"
                                 >Repository</a>
                         </li>
