--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -40,9 +40,9 @@ import pyIco from "../../public/icons/python.png?url";
                         </p></button
                     >
                 </a>
-                <a href="https://github.com/AntonioMrtz/SpotifyElectron">
+                <a href="https://github.com/AntonioMrtz/SpotifyElectron/releases">
                     <button class="my-btn btn-secondary"
-                        ><p style="margin: 0 !important;">Repository</p></button
+                        ><p style="margin: 0 !important;">Download</p></button
                     >
                 </a>
             </div>
