chore : update web description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="Astro description" />
+        <meta
+            name="description"
+            content="Landing page of music streaming app Spotify Electron"
+        />
         <meta name="viewport" content="width=device-width" />
         <script
             defer
