chore: add more descriptive title and description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,10 +20,10 @@
         />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Spotify Electron Web" />
+        <meta name="description" content="Spotify Electron>: open-source cross-platform music streaming app" />
         <meta
             name="keywords"
-            content="Spotify,spotify,SpotifyElectron,Spotify Electron,AntonioMrtz"
+            content="Spotify,spotify,SpotifyElectron,Spotify Electron,AntonioMrtz,streaming,music"
         />
         <meta name="author" content="Antonio Martínez Fernández" />
         <meta
@@ -37,7 +37,7 @@
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="400" />
         <meta property="og:image:height" content="300" />
-        <title>Spotify Electron</title>
+        <title>Spotify Electron>: open-source cross-platform music streaming app</title>
         <link rel="icon" href="icons/SpotifyElectronLogo.png" />
     </head>
     <body>
