--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,7 @@
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="400" />
         <meta property="og:image:height" content="300" />
-        <title>Spotify Electron>: open-source cross-platform music streaming app</title>
+        <title>Spotify Electron: open-source cross-platform music streaming app</title>
         <link rel="icon" href="icons/SpotifyElectronLogo.png" />
     </head>
     <body>
