--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,235 +13,234 @@ import pyIco from "../../public/icons/python.png?url";
 ---
 
 <header id="home">
-    <div class="d-flex justify-content-center mt-3 h-100">
-        <div class="d-flex flex-column justify-content-center">
-            <div
-                class="d-flex align-items-center flex-column"
-                style="margin-bottom: 3rem !important; margin-top: 1rem;"
+  <div class="d-flex justify-content-center mt-3 h-100">
+    <div class="d-flex flex-column justify-content-center">
+      <div
+        class="d-flex align-items-center flex-column"
+        style="margin-bottom: 3rem !important; margin-top: 1rem;"
+      >
+        <h1>
+          Welcome to <span class="text-gradient" style="white-space: nowrap;"
+            >Spotify Electron</span
+          >
+        </h1>
+        <h2 style="color:#adaaaa">Made by Antonio Martínez</h2>
+      </div>
+      <div
+        class="d-flex align-items-center justify-content-center btn-container"
+        style="gap:10px"
+      >
+        <a href="#theapp">
+          <button class="my-btn"
+            ><p
+              style="margin: 0 !important;color:#0d0d0e !important;font-weight:700"
             >
-                <h1>
-                    Welcome to <span
-                        class="text-gradient"
-                        style="white-space: nowrap;">Spotify Electron</span
-                    >
-                </h1>
-                <h2 style="color:#adaaaa">Made by Antonio Martínez</h2>
-            </div>
-            <div
-                class="d-flex align-items-center justify-content-center btn-container"
-                style="gap:10px"
-            >
-                <a href="#theapp">
-                    <button class="my-btn"
-                        ><p
-                            style="margin: 0 !important;color:#0d0d0e !important;font-weight:700"
-                        >
-                            Get started
-                        </p></button
-                    >
-                </a>
-                <a href="https://github.com/AntonioMrtz/SpotifyElectron/releases">
-                    <button class="my-btn btn-secondary"
-                        ><p style="margin: 0 !important;">Download</p></button
-                    >
-                </a>
-            </div>
-        </div>
-        <div
-            class="d-flex justify-content-center align-items-center header-img-container"
-        >
-            <img
-                class="img-fluid"
-                src={laptopHome}
-                alt="Laptop App Display"
-                width="700px"
-                height="314px"
-            />
-        </div>
+              Get started
+            </p></button
+          >
+        </a>
+        <a href="https://github.com/AntonioMrtz/SpotifyElectron/releases">
+          <button class="my-btn btn-secondary"
+            ><p style="margin: 0 !important;">Download</p></button
+          >
+        </a>
+      </div>
     </div>
-
     <div
-        class="d-flex justify-content-center align-items-center m-4 header-image-container-phone"
+      class="d-flex justify-content-center align-items-center header-img-container"
     >
-        <img class="img-fluid" src={laptopHome} alt="Laptop App Display" />
+      <img
+        class="img-fluid"
+        src={laptopHome}
+        alt="Laptop App Display"
+        width="700px"
+        height="314px"
+      />
     </div>
+  </div>
 
+  <div
+    class="d-flex justify-content-center align-items-center m-4 header-image-container-phone"
+  >
+    <img class="img-fluid" src={laptopHome} alt="Laptop App Display" />
+  </div>
+
+  <div
+    class="d-flex flex-column justify-content-center align-items-center tech-wrapper"
+  >
     <div
-        class="d-flex flex-column justify-content-center align-items-center tech-wrapper"
+      class="d-flex flex-wrap justify-content-center"
+      style="padding: 1%;border-bottom: 1px solid var(--app-logo-color)"
     >
-        <div
-            class="d-flex flex-wrap justify-content-center"
-            style="padding: 1%;border-bottom: 1px solid var(--app-logo-color)"
-        >
-            <img
-                class="tech-ico"
-                src={reactIco}
-                alt="react icon"
-                width="32px"
-                height="32px"
-            />
-            <img
-                class="tech-ico"
-                src={tsIco}
-                alt="typescript icon"
-                width="32px"
-                height="32px"
-            />
-            <img
-                class="tech-ico"
-                src={electronIco}
-                alt=" electron icon"
-                width="32px"
-                height="32px"
-            />
-            <img
-                class="tech-ico"
-                src={mongoIco}
-                alt=" mongodb icon"
-                width="32px"
-                height="32px"
-            />
-            <img
-                class="tech-ico"
-                src={cssIco}
-                alt="css icon"
-                width="32px"
-                height="32px"
-            />
-            <img
-                class="tech-ico"
-                src={pyIco}
-                alt="python icon"
-                width="32px"
-                height="32px"
-            />
-            <img
-                class="tech-ico"
-                src={fastApiIco}
-                alt="fast api icon"
-                width="32px"
-                height="32px"
-            />
-            <img
-                class="tech-ico"
-                src={boostrapIco}
-                alt="boostrap icon"
-                width="32px"
-                height="32px"
-            />
-            <img
-                class="tech-ico"
-                src={miuIco}
-                alt="material ui icon"
-                width="32px"
-                height="32px"
-            />
-            <img
-                class="tech-ico"
-                src={gaIco}
-                alt="github actions icon"
-                width="32px"
-                height="32px"
-            />
-        </div>
+      <img
+        class="tech-ico"
+        src={reactIco}
+        alt="react icon"
+        width="32px"
+        height="32px"
+      />
+      <img
+        class="tech-ico"
+        src={tsIco}
+        alt="typescript icon"
+        width="32px"
+        height="32px"
+      />
+      <img
+        class="tech-ico"
+        src={electronIco}
+        alt=" electron icon"
+        width="32px"
+        height="32px"
+      />
+      <img
+        class="tech-ico"
+        src={mongoIco}
+        alt=" mongodb icon"
+        width="32px"
+        height="32px"
+      />
+      <img
+        class="tech-ico"
+        src={cssIco}
+        alt="css icon"
+        width="32px"
+        height="32px"
+      />
+      <img
+        class="tech-ico"
+        src={pyIco}
+        alt="python icon"
+        width="32px"
+        height="32px"
+      />
+      <img
+        class="tech-ico"
+        src={fastApiIco}
+        alt="fast api icon"
+        width="32px"
+        height="32px"
+      />
+      <img
+        class="tech-ico"
+        src={boostrapIco}
+        alt="boostrap icon"
+        width="32px"
+        height="32px"
+      />
+      <img
+        class="tech-ico"
+        src={miuIco}
+        alt="material ui icon"
+        width="32px"
+        height="32px"
+      />
+      <img
+        class="tech-ico"
+        src={gaIco}
+        alt="github actions icon"
+        width="32px"
+        height="32px"
+      />
     </div>
+  </div>
 </header>
 
 <style>
-    header {
-        margin: auto !important;
-        max-width: 80rem !important;
-        color: white !important;
-        font-size: 20px !important;
-        line-height: 1.6 !important;
-        margin-bottom: 6rem !important;
-        margin-top: 3rem !important;
-        display: flex;
-        flex-direction: column;
-        height: 80%;
-    }
+  header {
+    margin: auto !important;
+    max-width: 80rem !important;
+    color: white !important;
+    font-size: 20px !important;
+    line-height: 1.6 !important;
+    margin-bottom: 6rem !important;
+    margin-top: 3rem !important;
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+  }
 
-    .text-gradient {
-        background-image: var(--accent-gradient);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-size: 400%;
-        background-position: 0%;
-    }
+  .text-gradient {
+    background-image: var(--accent-gradient);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 400%;
+    background-position: 0%;
+  }
 
+  h1 {
+    font-size: 5rem;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+  }
+
+  .my-btn {
+    border: none;
+    background-color: var(--app-logo-color-darker);
+    border-radius: 8px;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    border-radius: 9999px;
+    font-weight: 600;
+    color: white;
+  }
+
+  .my-btn:hover {
+    filter: brightness(0.75);
+  }
+
+  .btn-secondary {
+    background-color: var(--background-secondary);
+    border: 1px solid var(--app-logo-color-darker);
+    filter: brightness(0.85);
+  }
+
+  .header-image-container-phone {
+    display: none !important;
+  }
+
+  .tech-ico {
+    width: 32px !important;
+    margin: 0 10px 0 10px !important;
+  }
+
+  .tech-ico:hover {
+    transition: transform 0.1s; /* Add a transition on the transform property */
+    transform: scale(1.2);
+  }
+
+  .tech-wrapper {
+    flex-direction: row !important;
+    margin: 5%;
+  }
+
+  @media (max-width: 989px) {
     h1 {
-        font-size: 5rem;
-        font-weight: 700;
-        line-height: 1;
-        text-align: center;
+      font-size: 2.8rem !important;
     }
 
-    .my-btn {
-        border: none;
-        background-color: var(--app-logo-color-darker);
-        border-radius: 8px;
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem;
-        padding-left: 2.5rem;
-        padding-right: 2.5rem;
-        border-radius: 9999px;
-        font-weight: 600;
-        color: white;
+    header {
+      margin-top: 0 !important;
     }
 
-    .my-btn:hover {
-        filter: brightness(0.75);
-    }
-
-    .btn-secondary {
-        background-color: var(--background-secondary);
-        border: 1px solid var(--app-logo-color-darker);
-        filter: brightness(0.85);
+    .header-img-container {
+      display: none !important;
     }
 
     .header-image-container-phone {
-        display: none !important;
+      display: block !important;
     }
-
-    .tech-ico {
-        width: 32px !important;
-        margin: 0 10px 0 10px !important;
-    }
-
-    .tech-ico:hover {
-        transition: transform 0.1s; /* Add a transition on the transform property */
-        transform: scale(1.2);
-    }
-
     .tech-wrapper {
-        flex-direction: row !important;
-        margin: 5%;
+      display: none !important;
     }
+  }
 
-    @media (max-width: 989px) {
-        h1 {
-            font-size: 2.8rem !important;
-        }
-
-        header {
-            margin-top: 0 !important;
-        }
-
-        .header-img-container {
-            display: none !important;
-        }
-
-        .header-image-container-phone {
-            display: block !important;
-        }
-        .tech-wrapper {
-            display: none !important;
-        }
+  @media (max-width: 400px) {
+    .btn-container {
+      flex-direction: column !important;
     }
-
-    @media (max-width: 400px) {
-        .btn-container {
-            flex-direction: column !important;
-        }
-    }
+  }
 </style>
