--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,124 +1,129 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta
-            name="description"
-            content="Landing page of music streaming app Spotify Electron"
-        />
-        <meta name="viewport" content="width=device-width" />
-        <script
-            defer
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-            crossorigin="anonymous"></script>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous"
-        />
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Spotify Electron>: open-source cross-platform music streaming app" />
-        <meta
-            name="keywords"
-            content="Spotify,spotify,SpotifyElectron,Spotify Electron,AntonioMrtz,streaming,music"
-        />
-        <meta name="author" content="Antonio Martínez Fernández" />
-        <meta
-            property="og:image"
-            content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/icons/SpotifyElectronLogo.png"
-        />
-        <meta
-            property="og:image:secure_url"
-            content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/icons/SpotifyElectronLogo.png"
-        />
-        <meta property="og:image:type" content="image/png" />
-        <meta property="og:image:width" content="400" />
-        <meta property="og:image:height" content="300" />
-        <title>Spotify Electron: open-source cross-platform music streaming app</title>
-        <link rel="icon" href="icons/SpotifyElectronLogo.png" />
-    </head>
-    <body>
-        <slot />
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Landing page of music streaming app Spotify Electron"
+    />
+    <meta name="viewport" content="width=device-width" />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Spotify Electron>: open-source cross-platform music streaming app"
+    />
+    <meta
+      name="keywords"
+      content="Spotify,spotify,SpotifyElectron,Spotify Electron,AntonioMrtz,streaming,music"
+    />
+    <meta name="author" content="Antonio Martínez Fernández" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/icons/SpotifyElectronLogo.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/icons/SpotifyElectronLogo.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <title>
+      Spotify Electron: open-source cross-platform music streaming app
+    </title>
+    <link rel="icon" href="icons/SpotifyElectronLogo.png" />
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
 <style is:global>
-    :root {
-        scroll-behavior: smooth;
-        -webkit-font-smoothing: antialiased;
-        font-synthesis: none;
-        text-rendering: optimizeLegibility;
+  :root {
+    scroll-behavior: smooth;
+    -webkit-font-smoothing: antialiased;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
 
-        --app-logo-color: #9ad9ea;
-        --app-logo-color-darker: #56afc8;
+    --app-logo-color: #9ad9ea;
+    --app-logo-color-darker: #56afc8;
 
-        --accent: 154, 217, 234;
-        --accent-light: 224, 204, 250;
-        --accent-dark: 49, 10, 101;
-        --accent-gradient: linear-gradient(
-            45deg,
-            rgb(var(--accent)),
-            rgb(var(--accent-light)) 30%,
-            white 60%
-        );
+    --accent: 154, 217, 234;
+    --accent-light: 224, 204, 250;
+    --accent-dark: 49, 10, 101;
+    --accent-gradient: linear-gradient(
+      45deg,
+      rgb(var(--accent)),
+      rgb(var(--accent-light)) 30%,
+      white 60%
+    );
 
-        --backkground: #13151a;
-        --background-secondary: #17191e;
-        --secondary-color: #292c32;
-        --dark-filler: rgb(37 37 43);
+    --backkground: #13151a;
+    --background-secondary: #17191e;
+    --secondary-color: #292c32;
+    --dark-filler: rgb(37 37 43);
 
-        --subheader-text: #cecccc;
-        --subheader-text-darker: #bcbaba;
+    --subheader-text: #cecccc;
+    --subheader-text-darker: #bcbaba;
 
-        --spacer: #4e5053;
+    --spacer: #4e5053;
 
-        --phone-break-width: 989px;
-    }
-    html {
-        font-family: system-ui, sans-serif !important;
-    }
-    code {
-        font-family:
-            Menlo,
-            Monaco,
-            Lucida Console,
-            Liberation Mono,
-            DejaVu Sans Mono,
-            Bitstream Vera Sans Mono,
-            Courier New,
-            monospace !important;
-    }
-    body {
-        background: var(--backkground) !important;
-        overflow-x: hidden !important;
-    }
+    --phone-break-width: 989px;
+  }
+  html {
+    font-family: system-ui, sans-serif !important;
+  }
+  code {
+    font-family:
+      Menlo,
+      Monaco,
+      Lucida Console,
+      Liberation Mono,
+      DejaVu Sans Mono,
+      Bitstream Vera Sans Mono,
+      Courier New,
+      monospace !important;
+  }
+  body {
+    background: var(--backkground) !important;
+    overflow-x: hidden !important;
+  }
 
-    a {
-        text-decoration: none;
-    }
+  a {
+    text-decoration: none;
+  }
 
-    ul {
-        padding: 0% !important;
-    }
-    li {
-        list-style: none;
-    }
+  ul {
+    padding: 0% !important;
+  }
+  li {
+    list-style: none;
+  }
 
-    ::-webkit-scrollbar {
-        width: 12px;
-    }
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
 
-    ::-webkit-scrollbar-thumb {
-        background-color: var(--secondary-color);
-        border-radius: 12px;
-        border: 1px solid var(--backkground);
-    }
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--secondary-color);
+    border-radius: 12px;
+    border: 1px solid var(--backkground);
+  }
 
-    ::-webkit-scrollbar-track {
-        background-color: var(--backkground);
-        /* For Firefox */
-        scrollbar-color: #23262d #13151a;
-    }
+  ::-webkit-scrollbar-track {
+    background-color: var(--backkground);
+    /* For Firefox */
+    scrollbar-color: #23262d #13151a;
+  }
 </style>
